google_cloud_production/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -v -f docker-compose-production.yml -o kompose_production
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: django
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      tier: backend
      track: stable
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -v -f docker-compose-production.yml -o kompose_production
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        app: django
        tier: backend
        track: stable
        io.kompose.network/nginx-network: "true"
        io.kompose.network/postgres-network: "true"
        io.kompose.service: django
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          valueFrom:
            configMapKeyRef:
              key: DATABASE_URL
              name: django-env
        - name: DEBUG
          valueFrom:
            configMapKeyRef:
              key: DEBUG
              name: django-env
        - name: DJANGO_ALLOWED_HOSTS
          valueFrom:
            configMapKeyRef:
              key: DJANGO_ALLOWED_HOSTS
              name: django-env
        - name: DJANGO_EXPOSE_PORT
          valueFrom:
            configMapKeyRef:
              key: DJANGO_EXPOSE_PORT
              name: django-env
        - name: DJANGO_GENEESPLAATS_NL_VERSION
          valueFrom:
            configMapKeyRef:
              key: DJANGO_GENEESPLAATS_NL_VERSION
              name: django-env
        - name: DJANGO_SETTINGS_MODULE
          valueFrom:
            configMapKeyRef:
              key: DJANGO_SETTINGS_MODULE
              name: django-env
        - name: ENVIRONMENT
          valueFrom:
            configMapKeyRef:
              key: ENVIRONMENT
              name: django-env
        - name: NGINX_GENEESPLAATS_NL_VERSION
          valueFrom:
            configMapKeyRef:
              key: NGINX_GENEESPLAATS_NL_VERSION
              name: django-env
        - name: POSTGRES_DB
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_DB
              name: django-env
        - name: POSTGRES_GENEESPLAATS_NL_VERSION
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_GENEESPLAATS_NL_VERSION
              name: django-env
        - name: POSTGRES_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_PASSWORD
              name: django-env
        - name: POSTGRES_USER
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_USER
              name: django-env
        - name: PRODUCTION
          valueFrom:
            configMapKeyRef:
              key: PRODUCTION
              name: django-env
        - name: SECRET_KEY
          valueFrom:
            configMapKeyRef:
              key: SECRET_KEY
              name: django-env
        image: 'spikkie/django_geneesplaats_nl'
        name: django-geneesplaats-nl
        #livenessProbe:
        #  httpGet:
        #    path: /healthz
        #    port: 80
        #readinessProbe:
          # an http probe
          #httpGet:
          #  path: /readiness
          #  port: 80
          #initialDelaySeconds: 10
          #timeoutSeconds: 5
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
        - mountPath: /app/static_cdn/static_root/
          name: static-volume
        - mountPath: /app/static_cdn/media_root/
          name: media-volume
        - mountPath: /app/static_my_proj/
          name: static-my-proj-volume
      restartPolicy: Always
      volumes:
      - name: static-volume
        persistentVolumeClaim:
          claimName: static-volume
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-volume
      - name: static-my-proj-volume
        persistentVolumeClaim:
          claimName: static-my-proj-volume
      imagePullSecrets:
        - name: regcred
