google_cloud_production/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -v -f docker-compose-production.yml -o kompose_production
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
      app: django
      tier: frontend
      track: stable
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -v -f docker-compose-production.yml -o kompose_production
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        app: django
        tier: frontend
        track: stable
        io.kompose.network/nginx-network: "true"
        io.kompose.service: nginx
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          valueFrom:
            configMapKeyRef:
              key: DATABASE_URL
              name: nginx-env
        - name: DEBUG
          valueFrom:
            configMapKeyRef:
              key: DEBUG
              name: nginx-env
        - name: DJANGO_ALLOWED_HOSTS
          valueFrom:
            configMapKeyRef:
              key: DJANGO_ALLOWED_HOSTS
              name: nginx-env
        - name: DJANGO_EXPOSE_PORT
          valueFrom:
            configMapKeyRef:
              key: DJANGO_EXPOSE_PORT
              name: nginx-env
        - name: DJANGO_GENEESPLAATS_NL_VERSION
          valueFrom:
            configMapKeyRef:
              key: DJANGO_GENEESPLAATS_NL_VERSION
              name: nginx-env
        - name: DJANGO_SETTINGS_MODULE
          valueFrom:
            configMapKeyRef:
              key: DJANGO_SETTINGS_MODULE
              name: nginx-env
        - name: ENVIRONMENT
          valueFrom:
            configMapKeyRef:
              key: ENVIRONMENT
              name: nginx-env
        - name: NGINX_GENEESPLAATS_NL_VERSION
          valueFrom:
            configMapKeyRef:
              key: NGINX_GENEESPLAATS_NL_VERSION
              name: nginx-env
        - name: POSTGRES_DB
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_DB
              name: nginx-env
        - name: POSTGRES_GENEESPLAATS_NL_VERSION
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_GENEESPLAATS_NL_VERSION
              name: nginx-env
        - name: POSTGRES_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_PASSWORD
              name: nginx-env
        - name: POSTGRES_USER
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_USER
              name: nginx-env
        - name: PRODUCTION
          valueFrom:
            configMapKeyRef:
              key: PRODUCTION
              name: nginx-env
        - name: SECRET_KEY
          valueFrom:
            configMapKeyRef:
              key: SECRET_KEY
              name: nginx-env
        image: 'spikkie/nginx_geneesplaats_nl'
        name: nginx-geneesplaats-nl
        resources: {}
        volumeMounts:
        - mountPath: /app/static_cdn/static_root/
          name: static-volume-emptydir
        - mountPath: /app/static_cdn/media_root/
          name: media-volume-emptydir
      restartPolicy: Always
      volumes:
        - name: static-volume-emptydir
          emptyDir: {}
        - name: media-volume-emptydir
          emptyDir: {}
      imagePullSecrets:
        - name: regcred
status: {}
