google_cloud_production/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  selector:
    app: django
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8001
  type: LoadBalancer
