google_cloud_production/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres 
spec:
  selector:
    app: postgres
    tier: backend
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
