google_cloud_production/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-development.yml --controller deployment
      -o kompose_production_2
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: react
  name: react
  namespace: nginx-ingress
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: react
#status:
#  loadBalancer: {}
