google_cloud_production/nginx-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: nginx-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/nginx-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/nginx-network: "true"
